fixed vertical overflow sizing issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,6 @@ html,
 body,
 #app,
 #app > div {
-  height: 100%;
   margin: 0; /* So that the login page takes up the full screen */
   padding: 0; /* So that the login page takes up the full screen */
 }
