--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -2,6 +2,4 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  height: 100vh;
-  width: 100vw;
 }
